# agentic-mcq-generator

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
api/: __init__.py  config.py  dependencies.py  i18n.py
api/v1/: __init__.py  quizzes.py
quizzes/examples/: object_oriented_design_and_software_development.md  test_agentic_ai.md
src/: __init__.py  models.py  parser.py  quiz_ai.py  storage.py
src/agents/: __init__.py  agent.py  augmenter.py  evaluator.py  generator.py  schemas.py
src/agents/tools/: __init__.py  context_gatherer.py  coverage_analyzer.py  error_analyzer.py  error_evaluator.py  feedback_generator.py  pedagogy_extractor.py  question_generator.py  question_validator.py  quiz_analyzer.py  quiz_context_extractor.py  quiz_profile_extractor.py  suggestions_generator.py  topic_coverage_analyzer.py  topic_coverage_planner.py
static/: modal.js
templates/: feedback.html  modal.html  quiz.html  quizzes.html
templates/components/: analytics.html  analytics_stats.html  language_selector.html
translations/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  hu.json  id.json  it.json  ja.json  ko.json  lo.json  mn.json  rm.json  ru.json  th.json  ur.json  zh.json
